# voronoimeshmaker

./: .cleanup.cmake  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md
VMMLib/src/ErrorHandling/: ErrorHandling.cpp
cmake/: ConfigCompiler.cmake  ConfigDependencies.cmake  ConfigDocs.cmake  ConfigExamples.cmake  ConfigOptions.cmake  ConfigTargets.cmake  ConfigTests.cmake  ConfigUtils.cmake
docs_sphinx/: Conf.py  Doxyfile  Doxyfile.in  api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  overview.rst  requirements.txt
docs_sphinx/doxygen/html/: CommaSeparatedValues_8cpp.html  CommaSeparatedValues_8cpp__incl.map  CommaSeparatedValues_8cpp__incl.md5  CommaSeparatedValues_8h.html  CommaSeparatedValues_8h__dep__incl.map  CommaSeparatedValues_8h__dep__incl.md5  CommaSeparatedValues_8h__incl.map  CommaSeparatedValues_8h__incl.md5  CommaSeparatedValues_8h_source.html  DataExporter_8cpp.html  DataExporter_8cpp__incl.map  DataExporter_8cpp__incl.md5  DataExporter_8h.html  DataExporter_8h.js  DataExporter_8h__dep__incl.map  Ellipse_8h.js  (+577 more)
doxygen/html/: Ellipse_8cpp.html  Ellipse_8cpp__incl.map  Ellipse_8cpp__incl.md5  Ellipse_8h.html  Ellipse_8h.js  Ellipse_8h__dep__incl.map  Ellipse_8h__dep__incl.md5  Ellipse_8h__incl.map  Ellipse_8h__incl.md5  Ellipse_8h_source.html  GeometricDataHolder_8cpp.html  GeometricDataHolder_8cpp.js  GeometricDataHolder_8cpp__incl.map  GeometricDataHolder_8cpp__incl.md5  GeometricDataHolder_8h.html  GeometricDataHolder_8h.js  GeometricDataHolder_8h__dep__incl.map  GeometricDataHolder_8h__dep__incl.md5  GeometricDataHolder_8h__incl.map  GeometricDataHolder_8h__incl.md5  GeometricDataHolder_8h_source.html  GeometricDataHolder_8tpp.html  GeometricDataHolder_8tpp__dep__incl.map  GeometricDataHolder_8tpp__dep__incl.md5  MakerException_8cpp.html  MakerException_8cpp.js  MakerException_8cpp__incl.map  MakerException_8cpp__incl.md5  MakerException_8h.html  MakerException_8h.js  MakerException_8h__dep__incl.map  MakerException_8h__dep__incl.md5  MakerException_8h__incl.map  MakerException_8h__incl.md5  MakerException_8h_source.html  PolygonCSV_8cpp.html  PolygonCSV_8cpp__incl.map  PolygonCSV_8cpp__incl.md5  PolygonCSV_8h.html  PolygonCSV_8h.js  (+237 more)
doxygen/xml/: Ellipse_8cpp.xml  Ellipse_8h.xml  GeometricDataHolder_8cpp.xml  GeometricDataHolder_8h.xml  GeometricDataHolder_8tpp.xml  MakerException_8cpp.xml  MakerException_8h.xml  PolygonCSV_8cpp.xml  PolygonCSV_8h.xml  Polygon_8cpp.xml  Polygon_8h.xml  README_8md.xml  Rectangle_8cpp.xml  Rectangle_8h.xml  Shape2D_8cpp.xml  Shape2D_8h.xml  Shape3D_8h.xml  ShapeFactory_8cpp.xml  ShapeFactory_8h.xml  Shape_8cpp.xml  Shape_8h.xml  Star_8cpp.xml  Star_8h.xml  VoronoiMeshMaker_8cpp.xml  VoronoiMeshMaker_8h.xml  classID.xml  classVMMException.xml  configure_8h.xml  dir_0795aa6079c9c5e4875381072dfaa60a.xml  dir_1243ef2b1690351902c3c8b500b42814.xml  dir_3c39122fa3489942e99198c0224bbac1.xml  dir_3d76d392fc864399b71d61d55d21af57.xml  dir_76bf7ccb57fc843010ca00f87a33bb5d.xml  dir_7a7ddf677f3a0a5fb7fdc74763c9d25c.xml  dir_86c97043b29e68d0dd6da0fd7dd9a604.xml  dir_8ad10daabed8df44e925c43ae90eb5d4.xml  dir_8cddf64d52c7f27ec31295c723a04b6a.xml  dir_9b3aa4669936d2358fd4c29ce856fdde.xml  dir_a166c128cee399a6c56f1021b36b4e9a.xml  dir_be3b075f4d3e3a37aadd6e3c4e22a87f.xml  (+24 more)
examples/: CMakeLists.txt  Shape.rar
examples/Boundary2D/IO/Rectangle/: ex_Rectangle.cpp
examples/Boundary2D/IO/Rectangle1/: ex_Rectangle  ex_Rectangle1.cpp
examples/Core/: ex_core  ex_core.cpp
examples/ErrorHandling/Advanced/: ex_advanced.cpp
examples/ErrorHandling/Minimal/: ex_minimal  ex_minimal.cpp
examples/IO/: ex_IOHelpers  ex_IOHelpers.cpp
examples/IO/Boundary2D/: ex_Export_Rectangle.cpp
examples/IO/Boundary2D/Resultados/: Retangulo.vtk
examples/IO/IOHelpers/: ex_IOHelpers.cpp
examples/Parameters/: CMakeLists.txt
examples/Parameters/GeometricData/: CMakeLists.txt  Ex_GeometricData  Ex_GeometricData.cpp
examples/Shape/Shape2D/: CMakeLists.txt  Ex_Shape2D  Ex_Shape2D.cpp
include/VoronoiMeshMaker/: Errorq.rar  VoronoiMeshMaker.rar
sphinx/: .buildinfo  api_reference.html  examples.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  search.html  searchindex.js  sitemap.xml
sphinx/.doctrees/: api_reference.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  introduction.doctree
sphinx/_sources/: introduction.rst.txt
src/: Error1.rar  VoronoiMeshMaker.rar
src/Error/: MakerException.cpp  MakerLogger.cpp
src/Misc/: misc.cpp
src/Parameters/: GeometricDataHolder.cpp
src/Shape/: Shape.cpp  ShapeFactory.cpp
tests/: CMakeLists.txt
tests/Boundary2D/Shapes/Rectangle/: ut_Boundary2D_Shapes_Rectangle_results.xml  ut_Rectangle.cpp
tests/Core/: Core  ut_Core.cpp  ut_CoreErrors.cpp  ut_core.cpp
tests/ErrorHandling/Config/: ut_Config.cpp  ut_config.cpp
tests/ErrorHandling/CoreErrors/: ut_CoreErrors.cpp
tests/ErrorHandling/Core_Errors/: ut_Core_Errors.cpp  ut_core_errors.cpp
tests/ErrorHandling/Exception/: ut_Exception.cpp  ut_exception.cpp
tests/ErrorHandling/Integration/: ut_Integration.cpp  ut_integration.cpp
tests/ErrorHandling/Language/: ut_Language.cpp
tests/ErrorHandling/Macros/: ut_Macros.cpp  ut_macros.cpp
tests/ErrorHandling/Manager/: ut_Manager.cpp
tests/ErrorHandling/Maneger/:  ut_Maneger.cpp   ut_manager.cpp
tests/ErrorHandling/MessageCatalog/: ut_MessageCatalog.cpp
tests/ErrorHandling/Message_Catalog/:  ut_Message_Catalog.cpp   ut_message_catalog.cpp
tests/ErrorHandling/Severity/: ut_Severity.cpp  ut_severity.cpp
tests/ErrorHandling/Status/: ut_Status.cpp  ut_status.cpp
tests/ErrorHandling/TraitsCompile/: ut_TraitsCompile.cpp
tests/ErrorHandling/Traits_Compile/: ut_Traits_Compile.cpp  ut_traits.compile.cpp
tests/IO/: ut_IoHelpers.cpp
tests/IO/IOHelpers/: ut_IOHelpers.cpp
tests/IO/VTKLegacy/: ut_VTK_Legacy.cpp
tests/Parameters/: CMakeLists.txt
tests/Parameters/GeometricDataHolder/: CMakeLists.txt  GT_GeometricDataHolder.cpp  GeometricDataHolderTest
tests/Rectangle/: ut_Rectangle.cpp
(+427 files in other folders)
